syntax = "proto3";
package signaling;

message Message {
  oneof type {
    bool heartbeat = 1; // Incoming and outcoming message
    Content content = 2; // Incoming and outcoming message
    GroupData connect = 3; // Outcoming message
    bool connected = 4; // Incoming message
  }
}

message Content {
  uint32 senderId = 1;
  uint32 recipientId = 2;
  bool lastData = 3; // Forward last data and unsubscribe from the peer
  bytes data = 4;
}

message GroupData {
  uint32 id = 1;
  repeated uint32 members = 2;
}
